refactor: 테스트 코드 복원 + 데모 OAuth2 식별자 외부화 + 시드 콘텐츠 확장
feature/seed-from-json 의 도메인별 테스트 (member / pronunciation / learning /
statistics / external / 인프라 슬라이스, 188 파일 / +9k LOC) 를 복원해 develop
상에 다시 올린다. JaCoCo 80% 라인 커버리지 게이트와 함께 build.gradle 의
테스트 의존성, REST Docs (Asciidoctor) 파이프라인, smoke 테스트도 같이 들어온다.
total 239 tests / coverage gate 통과.

데모 OAuth2 사용자 식별자 (DEMO_GOOGLE_EMAIL / DEMO_GOOGLE_NICKNAME) 는
AuthService 안에 static 상수로 박혀 있던 것을 AppProperties.Auth.DemoGoogle
설정으로 옮긴다. 환경별 yaml 에 키를 만들고 운영은 환경 변수로 주입한다.

  app.auth.demo-google.email
  app.auth.demo-google.nickname

테스트는 AppProperties 를 주입받아 데모 식별자를 읽도록 바꾼다.

InitialDataLoaderTest 는 운영 seed/tracks.json 의 5트랙 / 12스텝 콘텐츠 확장에
영향받지 않도록 src/test/resources/seed/test-tracks.json (3트랙 / 9스텝) 로
ClassPathResource 를 분리한다.

이로써 운영 시드는 R/L 발음 챕터 확장 (5트랙 / 1412 라인) 을 그대로 유지하면서
테스트는 안정된 fixture 위에서 동작한다.